--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,34 @@
 <div class="container mt-5">
-    <app-search-devs (findDev)="getDevs($event)"></app-search-devs>
+    <app-search-devs (findDev)="getDevs($event); nameDev = $event; page_atual = 1"></app-search-devs>
     <!-- <button (click)="getDevs()">teste</button> -->
+</div>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4" *ngIf="items">
-        <div class="col" *ngFor="let item of items">
-          <div class="card h-100">
-            <img src={{item.avatar_url}} class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{item.login}}</h5>
-              <p class="card-text">{{item.url}}</p>
-            </div>
-          </div>
+
+
+<div class="container mt-2">
+  <!-- <nav aria-label="Page navigation example" class="text-end">
+  <pre>Total de desenvolvedores encontrados <b>{{total_count}}</b></pre>
+    <ul class="pagination d-flex justify-content-end">
+      <li class="page-item"><a class="link" [class.text-secondary]="page_atual <= 1" (click)="previoustPage()">Anterior</a></li>
+      <li class="page-item"><a class="link" [class.text-secondary]="page_atual == pagination(total_count)" (click)="nextPage()">Próxima</a></li>
+      <li class="page-item"><small>Página {{page_atual}} de {{pagination(total_count)}}</small></li>
+    </ul>
+  </nav> -->
+
+  <app-pagination [total_count]="total_count" (page)="getDevs(nameDev, $event)"></app-pagination>
+
+
+  <p *ngIf="!items">Nenhum desenvolvedor encontrado</p>
+  <div class="row row-cols-1 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 g-4 mt-4 card-grid" *ngIf="items">
+    <div class="col" *ngFor="let item of items">
+      <div class="card h-100">
+        <img src={{item.avatar_url}} class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{item.login}}</h5>
+          <p class="card-text">{{item.url}}</p>
         </div>
       </div>
+    </div>
+  </div>
 </div>
 
