Change Navbar Links

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,10 +13,13 @@
   <div class="row row-cols-1 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 g-4 mt-4 card-grid" *ngIf="items">
     <div class="col" *ngFor="let item of items">
       <div class="card h-100">
-        <img src={{item.avatar_url}} class="card-img-top" alt="...">
+        <img src={{item.avatar_url}} class="card-img-top" alt="Foto do usuário do GitHub">
         <div class="card-body">
           <h5 class="card-title">{{item.login}}</h5>
-          <p class="card-text">{{item.url}}</p>
+          <p class="card-text mt-4"><small><a target="blank" href="{{item.html_url}}">{{item.html_url}}</a></small></p>
+        </div>
+        <div class="text-center m-2 mb-4">
+          <a [routerLink]="['/profile', item.login]" class="btn btn-dark">Coder Review</a>
         </div>
       </div>
     </div>
