--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -1,5 +1,12 @@
+
+
+.card
+    
+.card:hover
+    transform: scale(1.1)
+    cursor:pointer
+
 .card-grid
-    background: #F8F8FF
-
-
-
+    border-radius: 1rem
+    background: rgb(246,246,251)
+    background: radial-gradient(circle, rgba(246,246,251,1) 0%, rgba(225,226,225,1) 92%, rgba(143,146,147,1) 100%)
