--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <router-outlet></router-outlet>
+</div>
+<div class="footer">
+
+</div>
+<app-footer></app-footer>
