--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,2 +1,8 @@
-body 
-    background: #ededed
+.wrapper 
+    height:auto 
+    min-height:100%
+    position: relative
+
+.footer
+    position:absolute
+    bottom:0px
