--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary border-bottom border-body" data-bs-theme="dark">
     <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary"> -->
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Find Dev</a>
+          <a class="navbar-brand" href="#"><i class="bi bi-bullseye text-danger"></i> Find Dev</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
