--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+html, body
+    height: 100%
+
 body 
     background: #ededed
+    min-height: 100vh
+    display: flex
+    flex-direction: column
+    position: relative
+
+.wrapper 
+    height:auto 
+    min-height:100%
