--- a/src/app/components/search-devs/search-devs.component.html
+++ b/src/app/components/search-devs/search-devs.component.html
@@ -7,5 +7,5 @@
       aria-describedby="button-find"
       (keydown.enter)="sendName(name.value)"
       #name>
-    <button class="btn btn-outline-secondary" type="button" id="button-find" (click)="sendName(name.value)">Buscar</button>
+    <button aria-label="Buscar desenvolverdor" class="btn btn-outline-secondary" type="button" id="button-find" (click)="sendName(name.value)">Buscar</button>
   </div>
