--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<!-- <div class="container"> -->
-    <footer class="d-flex bg-dark flex-wrap justify-content-between align-items-center py-3 mt-5 border-top" data-bs-theme="dark">
-      <div class="col-md-4 d-flex align-items-center ">
-        <span tabindex="0" aria-label="Copyright, 2024 Find Dev" class="m-2 mb-md-0 text-body-secondary">&copy; 2024 Find Dev</span>
-      </div>
-    </footer>
-  <!-- </div> -->
+<footer class="d-flex bg-dark flex-wrap justify-content-between align-items-center py-3 mt-5 border-top"
+  data-bs-theme="dark">
+  <div class="col-md-4 d-flex align-items-center ">
+    <span tabindex="0" aria-label="Copyright, 2024 Find Dev" class="m-2 mb-md-0 text-body-secondary">&copy; 2024 Find
+      Dev</span>
+  </div>
+</footer>
