--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,24 +1,19 @@
-
-
+<header>
   <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary border-bottom border-body" data-bs-theme="dark">
-    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary"> -->
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#" aria-label="Aplicação Find Dev"><i class="bi bi-bullseye text-danger"></i> Find Dev</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#" aria-label="home">Home</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-  
-  <!-- <nav class="navbar bg-primary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" aria-label="Aplicação Find Dev"><i class="bi bi-bullseye text-danger"></i> Find
+        Dev</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#" aria-label="home">Home</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
-  
-  <nav class="navbar" style="background-color: #e3f2fd;">
-  </nav> -->
+</header>
